# aces-high

./: .gitignore  AGENT4_QUICK_SUMMARY.txt  AGENT4_TEST_SUMMARY.md  AGENT5_REPORT.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES_SUMMARY.txt  DEPLOYMENT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_AGENT3.md  RENDERING_IMPLEMENTATION_REPORT.md  TESTING.md  TEST_REPORT.md  build.sh  initial-spec.md  package.json  playwright.config.js  webpack.config.js
.github/workflows/: test.yml
src/: index.html  index.js  lib.rs
src/engine/: mod.rs
src/game/: components.rs  entities.rs  mod.rs  state.rs
src/game/systems/: ai.rs  collision.rs  mod.rs  procedural.rs  upgrade.rs  weapon.rs
src/utils/: math.rs  mod.rs  performance.rs  pool.rs  random.rs
src/web/: mod.rs
tests/: rendering_tests.rs
tests/integration/: game-loading.spec.js  performance.spec.js  save-load.spec.js
tests/performance/: run-performance-tests.js
